fix : items in the description
-correct unlockScreen
-fix borders of PortalModal with and without scrollbar and change svg  Close to IoClose
-fix play of video after click on text tip
-use prettier in useScrollLock
-add space in skills page
-add  handleClickOutside and useKeyPress into Accordion

--- a/app/[locale]/styles/main.scss
+++ b/app/[locale]/styles/main.scss
@@ -589,8 +589,12 @@ main {
     max-height: 80vh;
     padding: 2rem;
     overflow: auto;
-    border-radius: var(--border-radius--lg) 0 0 var(--border-radius--lg);
+    border-radius: var(--border-radius--lg);
     background: var(--color--bg-light);
+
+    &__with-scrollbar {
+      border-radius: var(--border-radius--lg) 0 0 var(--border-radius--lg);
+    }
 
     @include useScreen("tablet-sm") {
       padding: 3rem;
