--- a/app/[locale]/styles/partials/_button.scss
+++ b/app/[locale]/styles/partials/_button.scss
@@ -103,8 +103,11 @@
       position: absolute;
       top: 20px;
       right: 20px;
-      width: 20px;
-      height: 20px;
+      svg,
+      path {
+        width: 20px;
+        height: 20px;
+      }
     }
   }
 
